Extensive documentation before Ouput report learns

--- a/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
+++ b/Exploratory/COVID-19 NYTimes - Exploratory.ipynb
@@ -10,10 +10,11 @@
     "\n",
     "Here you'll find the process to understand the dataset and correct potential issues before joining with other data.\n",
     "\n",
-    "### Learning Resume\n",
+    "### Learnings\n",
+    "\n",
     "- _FIPS_ imported as float due NULL values\n",
     "- All _FIPS_ are well formatted (5 characters numeric)\n",
-    "- There are some _FIPS_ as NULL but state-county data present (We can add correct FIPS fo them)\n",
+    "- There are some _FIPS_ as NULL but state-county data present (We can add correct FIPS for them)\n",
     "    - New York City\n",
     "    - Kansas City\n",
     "    - Joplin\n",
