--- a/Exploratory/JOIN Dataset - Exploratory.ipynb
+++ b/Exploratory/JOIN Dataset - Exploratory.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JOIN Dataset - Exploratory - Exploratory\n",
+    "\n",
+    "This Notebook contains the exploratory process of joining the two datasets.\n",
+    "\n",
+    "Here you'll find the process to join the two files (NY Times Data Source and Population by County)\n",
+    "\n",
+    "### Learnings\n",
+    "\n",
+    "- FIPS might be on format SS for state and CCC for counties concatenated SSCCC to be able to join\n",
+    "- There are in total 61 counties without population data (46 with Unknown name)\n",
+    "- There are 15 counties name with Unknown name (Some of them repeated over different states)\n",
+    "- Using cumsum() function to calculate cumulative deaths/cases per day\n",
+    "- Documented issues related to columns being convert to object type when NaN values created\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing Puerto Rico since is not part of US satates\n",
     "covidCounties = covidCounties[covidCounties['state'] !='Puerto Rico']"
    ]
   },
@@ -35,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fix known issues to reconvert to Integer\n",
     "covidCounties['deaths'] = covidCounties['deaths'].str.strip().astype('float').astype('Int64')"
    ]
   },
@@ -46,7 +67,9 @@
    },
    "outputs": [],
    "source": [
+    "# Convert to date time for feature order\n",
     "covidCounties['date'] = pd.to_datetime(covidCounties['date'])\n",
+    "# Trying to fix New York \n",
     "covidCounties.loc[covidCounties['county'] == 'New York City', 'fips']  = '36061'"
    ]
   },
@@ -232,6 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using only data to preview some insights\n",
     "countiesData = countiesData[countiesData['SUMLEV'] == 50][['SUMLEV','STATE','COUNTY','STNAME','CTYNAME','POPESTIMATE2019']]\n",
     "countiesData.rename(columns={\"POPESTIMATE2019\": \"population_2019\"},  inplace = True)"
    ]
@@ -242,6 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filling fields with 0 to create FIPS format\n",
     "countiesData['COUNTY'] = countiesData['COUNTY'].astype(str).str.zfill(3)\n",
     "countiesData['STATE'] = countiesData['STATE'].astype(str).str.zfill(2)"
    ]
@@ -272,18 +297,20 @@
     }
    ],
    "source": [
-    "countiesData['fips'] =  countiesData['STATE'] +  countiesData['COUNTY']\n",
+    "# Creting fips with format SSCCC (5 digits)\n",
+    "countiesData['fips'] = countiesData['STATE'] +  countiesData['COUNTY']\n",
     "countiesData.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# Joining data\n",
     "joined = covidCounties.merge(countiesData, how='left', on='fips')\n",
     "joined['population_2019'] = joined['population_2019'].astype('Int64')\n",
     "joined['deaths'] = joined['deaths'].astype('Int64')"
@@ -394,6 +421,7 @@
     }
    ],
    "source": [
+    "# Find list of county with empty right join\n",
     "cty = joined[['county','CTYNAME']].drop_duplicates()\n",
     "cty['county'] = cty['county'] + ' County' \n",
     "cty[cty['CTYNAME']  != cty['CTYNAME'] ]"
@@ -525,27 +553,218 @@
     }
    ],
    "source": [
+    "# List all 61 counties without population data\n",
     "cty = joined[['county','state','CTYNAME']].drop_duplicates()\n",
     "cty['county'] = cty['county'] + ' County' \n",
-    "cty[cty['CTYNAME']  != cty['CTYNAME'] ]\n",
-    "# 61 counties without population"
+    "cty[cty['CTYNAME']  != cty['CTYNAME'] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>population_2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>17031</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5150233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464316</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>21117</td>\n",
+       "      <td>Kenton</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>17284</td>\n",
+       "      <td>213</td>\n",
+       "      <td>166998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464317</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>21119</td>\n",
+       "      <td>Knott</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>24</td>\n",
+       "      <td>14806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464318</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>21121</td>\n",
+       "      <td>Knox</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>3891</td>\n",
+       "      <td>47</td>\n",
+       "      <td>31145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464319</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>21125</td>\n",
+       "      <td>Laurel</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>7612</td>\n",
+       "      <td>81</td>\n",
+       "      <td>60813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464320</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>56045</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>663</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6927</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1464321 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date   fips     county       state  cases  deaths  \\\n",
+       "0       2020-01-21  53061  Snohomish  Washington      1       0   \n",
+       "1       2020-01-22  53061  Snohomish  Washington      1       0   \n",
+       "2       2020-01-23  53061  Snohomish  Washington      1       0   \n",
+       "3       2020-01-24  17031       Cook    Illinois      1       0   \n",
+       "4       2020-01-24  53061  Snohomish  Washington      1       0   \n",
+       "...            ...    ...        ...         ...    ...     ...   \n",
+       "1464316 2021-07-08  21117     Kenton    Kentucky  17284     213   \n",
+       "1464317 2021-07-08  21119      Knott    Kentucky   1165      24   \n",
+       "1464318 2021-07-08  21121       Knox    Kentucky   3891      47   \n",
+       "1464319 2021-07-08  21125     Laurel    Kentucky   7612      81   \n",
+       "1464320 2021-07-08  56045     Weston     Wyoming    663       6   \n",
+       "\n",
+       "         population_2019  \n",
+       "0                 822083  \n",
+       "1                 822083  \n",
+       "2                 822083  \n",
+       "3                5150233  \n",
+       "4                 822083  \n",
+       "...                  ...  \n",
+       "1464316           166998  \n",
+       "1464317            14806  \n",
+       "1464318            31145  \n",
+       "1464319            60813  \n",
+       "1464320             6927  \n",
+       "\n",
+       "[1464321 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ordering to create comulative\n",
+    "joined = joined[['date','fips','county','state','cases','deaths','population_2019']]\n",
+    "joined.sort_values(['date']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined = joined[['date','fips','county','state','cases','deaths','population_2019']]\n",
-    "joined.sort_values(['date']).reset_index(drop=True)\n",
+    "# Create comulative by fips, once they are ordered\n",
     "joined[\"comulative_cases\"] = joined.groupby(['fips'])['cases'].cumsum(axis=0)\n",
     "joined[\"comulative_deaths\"] = joined.groupby(['fips'])['deaths'].cumsum(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -563,15 +782,230 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Reconvert\n",
     "joined[\"comulative_deaths\"] =joined[\"comulative_deaths\"].astype('Int64')\n",
-    "\n",
     "joined.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>population_2019</th>\n",
+       "      <th>comulative_cases</th>\n",
+       "      <th>comulative_deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1451493</th>\n",
+       "      <td>2021-07-04</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>40330</td>\n",
+       "      <td>605</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>8315400</td>\n",
+       "      <td>156060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1454660</th>\n",
+       "      <td>2021-07-05</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>40330</td>\n",
+       "      <td>605</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>8355730</td>\n",
+       "      <td>156665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1457827</th>\n",
+       "      <td>2021-07-06</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>40437</td>\n",
+       "      <td>608</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>8396167</td>\n",
+       "      <td>157273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460994</th>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>40493</td>\n",
+       "      <td>610</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>8436660</td>\n",
+       "      <td>157883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1464162</th>\n",
+       "      <td>2021-07-08</td>\n",
+       "      <td>53061</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>40543</td>\n",
+       "      <td>610</td>\n",
+       "      <td>822083</td>\n",
+       "      <td>8477203</td>\n",
+       "      <td>158493</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>535 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date   fips     county       state  cases  deaths  \\\n",
+       "0       2020-01-21  53061  Snohomish  Washington      1       0   \n",
+       "1       2020-01-22  53061  Snohomish  Washington      1       0   \n",
+       "2       2020-01-23  53061  Snohomish  Washington      1       0   \n",
+       "4       2020-01-24  53061  Snohomish  Washington      1       0   \n",
+       "7       2020-01-25  53061  Snohomish  Washington      1       0   \n",
+       "...            ...    ...        ...         ...    ...     ...   \n",
+       "1451493 2021-07-04  53061  Snohomish  Washington  40330     605   \n",
+       "1454660 2021-07-05  53061  Snohomish  Washington  40330     605   \n",
+       "1457827 2021-07-06  53061  Snohomish  Washington  40437     608   \n",
+       "1460994 2021-07-07  53061  Snohomish  Washington  40493     610   \n",
+       "1464162 2021-07-08  53061  Snohomish  Washington  40543     610   \n",
+       "\n",
+       "         population_2019  comulative_cases  comulative_deaths  \n",
+       "0                 822083                 1                  0  \n",
+       "1                 822083                 2                  0  \n",
+       "2                 822083                 3                  0  \n",
+       "4                 822083                 4                  0  \n",
+       "7                 822083                 5                  0  \n",
+       "...                  ...               ...                ...  \n",
+       "1451493           822083           8315400             156060  \n",
+       "1454660           822083           8355730             156665  \n",
+       "1457827           822083           8396167             157273  \n",
+       "1460994           822083           8436660             157883  \n",
+       "1464162           822083           8477203             158493  \n",
+       "\n",
+       "[535 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Prove comulatives is working\n",
+    "joined[joined['fips'] == '53061']"
    ]
   }
  ],
