--- a/Exploratory/Population Estimate Data  (2020) - Exploratory.ipynb
+++ b/Exploratory/Population Estimate Data  (2020) - Exploratory.ipynb
@@ -13,11 +13,11 @@
     "Data source template:\n",
     "https://www2.census.gov/programs-surveys/popest/datasets/2010-2019/counties/totals/\n",
     "\n",
-    "### Learning Resume\n",
+    "### Learnings\n",
     "\n",
     "- Encoding of source file need to be set due decode issue\n",
-    "- DataSet contains records with COUNTY FLIPS = 0, they are STATE aggregated data\n",
-    "- SUMLEV help us to exclude aggragetion state population (Exclude SUMLEV = 40)\n",
+    "- Dataset contains records with COUNTY FLIPS = 0, they are STATE aggregated data\n",
+    "- SUMLEV help us to exclude aggregation state population (Exclude SUMLEV = 40)\n",
     "- POPESTIMATE2019 is a very clean column with a big standard deviation\n",
     "    - Min population: 86\n",
     "    - Max population: 10039107\n"
